; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ath79/files/drivers/net/ethernet/atheros/ag71xx/extr_ag71xx_main.c_ag71xx_dump_intr.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ath79/files/drivers/net/ethernet/atheros/ag71xx/extr_ag71xx_main.c_ag71xx_dump_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ag71xx = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [31 x i8] c"%s: %s intr=%08x %s%s%s%s%s%s\0A\00", align 1
@AG71XX_INT_TX_PS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"TXPS \00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@AG71XX_INT_TX_UR = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [6 x i8] c"TXUR \00", align 1
@AG71XX_INT_TX_BE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [6 x i8] c"TXBE \00", align 1
@AG71XX_INT_RX_PR = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [6 x i8] c"RXPR \00", align 1
@AG71XX_INT_RX_OF = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [6 x i8] c"RXOF \00", align 1
@AG71XX_INT_RX_BE = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [6 x i8] c"RXBE \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ag71xx*, i8*, i32)* @ag71xx_dump_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ag71xx_dump_intr(%struct.ag71xx* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.ag71xx*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.ag71xx* %0, %struct.ag71xx** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ag71xx*, %struct.ag71xx** %4, align 8
  %8 = getelementptr inbounds %struct.ag71xx, %struct.ag71xx* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @AG71XX_INT_TX_PS, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  %18 = zext i1 %17 to i64
  %19 = select i1 %17, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* @AG71XX_INT_TX_UR, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  %24 = zext i1 %23 to i64
  %25 = select i1 %23, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* @AG71XX_INT_TX_BE, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  %30 = zext i1 %29 to i64
  %31 = select i1 %29, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* @AG71XX_INT_RX_PR, align 4
  %34 = and i32 %32, %33
  %35 = icmp ne i32 %34, 0
  %36 = zext i1 %35 to i64
  %37 = select i1 %35, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %38 = load i32, i32* %6, align 4
  %39 = load i32, i32* @AG71XX_INT_RX_OF, align 4
  %40 = and i32 %38, %39
  %41 = icmp ne i32 %40, 0
  %42 = zext i1 %41 to i64
  %43 = select i1 %41, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %44 = load i32, i32* %6, align 4
  %45 = load i32, i32* @AG71XX_INT_RX_BE, align 4
  %46 = and i32 %44, %45
  %47 = icmp ne i32 %46, 0
  %48 = zext i1 %47 to i64
  %49 = select i1 %47, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %50 = call i32 @DBG(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %11, i8* %12, i32 %13, i8* %19, i8* %25, i8* %31, i8* %37, i8* %43, i8* %49)
  ret void
}

declare dso_local i32 @DBG(i8*, i32, i8*, i32, i8*, i8*, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
